src/components/ConsoleLogger/ConsoleLogger.scss
.ConsoleLogger {
  border: 1px solid #a5b2bf;
  border-bottom: none;
  position: fixed;
  left: 30px;
  bottom: -600px;
  z-index: 2;
  &.open{
    bottom: 0;
  }
  &.close{
    bottom: -645px;
  }
  transition: all 0.4s ease-in-out;
  .terminal-wrapper{
    width: 600px;
    height: 600px;
  }
  >div{
    justify-content: center;
    align-items: center;
  }
  .console-title{
    cursor: pointer;
    >div{
      display: flex;
      justify-content: space-between;
      align-items: center;
      .left-section{
        display: flex;
        align-items: center;
        i{
          font-size: 22px;
          margin-right: 10px;
          color: #667d9a;

        }
        .fa-window-minimize{
          font-size: 19px;
          margin-top: -10px;
        }
        .fa-window-maximize{
          font-size: 19px;
        }
        span{
          padding-left:5px;
        }
      }
      .badge{
        display: inline-block;
        min-width: 18px;
        font-size: 12px;
        height: 18px;
        border-radius: 9px;
        background: #667d9a;
        color: white;
      }
    }
  }
  .terminal-base{
    >div{
      >div{
        >div{
          >div{
            >div{
              >div:last-child{
                display: none;
              }
            }
          }
        }
      }
    }
  }
}

